[package]
name = "nsqst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = {version="4.2.2", features=["derive"]}
diesel = { version = "2.0.4", features = ["sqlite"] }
futures = "0.3.28"
log = "0.4.17"
simplelog = "0.12.1"
tokio = { version = "1.17.0", features = ["full"] }
tokio-nsq = "0.13.0"

[profile.release]
debug = true